--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -72,7 +72,8 @@
     "addFile": "Adicionar arquivo",
     "constraint": "Adicione até 5 MB",
     "next": "Feito",
-    "micError": "Não consegue acessar o microfone?",
+    "uploadFile" : "Subir Arquivo",
+    "micError": "Não consegue acessar o microfone? Envie o arquivo de áudio",
     "micErrorDescription": "Por favor, envie o arquivo de áudio aqui",
     "fileDurationTooShort": "Por favor, carregue um arquivo de pelo menos 3 segundos",
     "fileSizeTooBig": "Por favor, carregue um arquivo de menos de 5 MB",
@@ -84,12 +85,13 @@
       "intro1": "Por favor, tussa longe de outras pessoas ao seu redor! Caso esteja se sentindo doente, por favor, sente-se.",
       "intro2": "Em um ambiente silencioso, por favor, pressione o botão gravar e tussa intencionalmente cerca de 3 a 5 vezes."
     },
-    "title": "Gravação enviada",
-    "subtitle": "Fique à vontade para ouvir",
-    "next": "Feito"
+    "title": "Gravação concluída",
+    "subtitle": "Fique à vontade para ouvir!",
+    "next": "Feito",
+    "retake": "Retomar"
   },
   "predictionResult": {
-    "processingTitle": "Em processamento",
+    "processingTitle": "Em processamento...",
     "predictionResultTitle": "Resultado de previsão",
     "likelihoodPrefix": "Resultado da COVID-19:",
     "nextButton": "Envie outra tosse",
